# ot-harjoitustyo

./: .coverage  .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
data/: database.sqlite
dokumentaatio/: arkkitehtuuri.md  chanelog  changelog  changelog.md  käyttöohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/tests/: maksukortti_test.py
laskarit/viikko2/poetry-testi/: pyproject.toml
laskarit/viikko2/poetry-testi/src/: index.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/htmlcov/: d_145eef247bfb46b6_kassapaate_py.html  d_145eef247bfb46b6_maksukortti_py.html  index.html  status.json
laskarit/viikko2/unicafe/src/: .coverage
laskarit/viikko2/unicafe/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  monopoli_laajennettu.md  sekvenssikaavio.md  skevenssikaavio_laajennettu.md
src/: checkguess.py  config.py  database_connection.py  game.py  index.py  initialize_database.py  main.py  settings.py  start.py
src/entities/: user.py
src/repositories/: user_repository.py
src/services/: checkguess.py  game_service.py
src/tests/: game_service_test.py  game_test.py  test_users.py
src/ui/: create_user_view.py  game.py  game_ui.py  login_view.py  stats_view.py  ui.py
