[tool.poetry]
name = "ot-harjoitustyö"
version = "0.1.0"
description = ""
authors = ["mirelle01 <lybackmirelle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.0"
pygame = "^2.1.2"
pytest = "^7.1.1"
lint = "^1.2.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pylint = "^2.13.5"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
